--- a/miniProject/3-post/post-details.html
+++ b/miniProject/3-post/post-details.html
@@ -15,12 +15,17 @@
         <h1>post-details</h1>
     </div>
     <div id="main" class="flex"></div>
+
+    <div id="comments">
+        <h2 class="header flex">comments</h2>
+        <div id="comBox"></div>
+    </div>
 </div>
 
-<div id="comments">
-    <h2 class="header flex">comments</h2>
-    <div id="comBox"></div>
-</div>
+<!--<div id="comments">-->
+<!--    <h2 class="header flex">comments</h2>-->
+<!--    <div id="comBox"></div>-->
+<!--</div>-->
 
 
 <script src="postMain.js"></script>
